[package]
name = "doc-link"
version = "0.1.0"
edition = "2021"
description = "Background service that monitors code repositories for Markdown files and maintains a mirror directory of symlinks"
license = "MIT"
repository = "https://github.com/nathanwilk7/doc-link"
keywords = ["markdown", "symlink", "mirror", "documentation"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "doc-link"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = { version = "3", features = ["termination"] }
dirs = "6"
globset = "0.4"
ignore = "0.4"
notify = "7"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
shellexpand = "3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
signal-hook = "0.3"

[dev-dependencies]
tempfile = "3"
