[package]
name = "ulysses-link"
version = "0.9.6"
edition = "2021"
description = "Background service that extracts documentation files from code repositories and links them for Ulysses external folder importing"
license = "MIT"
repository = "https://github.com/LogicWolfe/ulysses-link"
keywords = ["markdown", "mirror", "ulysses", "documentation"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "ulysses-link"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
ctrlc = { version = "3", features = ["termination"] }
dialoguer = "0.11"
diffy = "0.4"
dirs = "6"
globset = "0.4"
ignore = "0.4"
notify = "7"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
toml = "0.8"
toml_edit = "0.22"
shellexpand = "3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
signal-hook = "0.3"

[dev-dependencies]
tempfile = "3"
